--- a/html/carrito.html
+++ b/html/carrito.html
@@ -11,7 +11,7 @@
     <div id="carrito"></div>
     <h2 id="total"></h2>
     <button id="vaciar-carrito">Vaciar carrito</button>
-    <a href="../index.html">volver a comprar</a>
+    <a class="boton" href="../index.html">volver a comprar</a>
 
     <script src="../javascript/carrito.js" defer></script>
 </body>
