--- a/html/administrador.html
+++ b/html/administrador.html
@@ -6,7 +6,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="../javascript/administrador.js" defer></script>
     <link rel="stylesheet" href="../css/administrador.css">
-    <title>Document</title>
+    <title>Administracion/title>
 </head>
 <body>
     <div class="div1" id="div1">
