--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./javascript/carritoPrincipal.js" defer></script>
     <link rel="stylesheet" href="./css/styleCarritprincipal.css">
-    <title>Document</title>
+    <title>inicio</title>
 </head>
 <body>
     <h1>Productos en venta</h1>
