--- a/html/administrador.html
+++ b/html/administrador.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="../javascript/administrador.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="../css/administrador.css">
-    <title>Administracion/title>
-</head>
+    <title>Administracion</title> </head>
 <body>
     <div class="div1" id="div1">
         <label for="input1">AGREGAR MARCA</label>
@@ -25,5 +23,5 @@
     <div id="div2">
     </div>
 
-</body>
+    <script src="../javascript/administrador.js"></script> </body>
 </html>
