--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="colores" id="lista-productos"></div>
 
     <a class="boton" href="./html/carrito.html">Ir al carrito</a>
-    <a class="boton" href="./javascript/administrador.js">Agregar producto</a>
+    <a class="boton" href="./html/administrador.html">Agregar producto</a>
 
     </body>
 </html>
