--- a/html/administrador.html
+++ b/html/administrador.html
@@ -22,6 +22,6 @@
     <p id="productoMostrado">no hay productos agregados</p>
     <div id="div2">
     </div>
-
+    <a class="boton" href="../index.html">volver a comprar</a>
     <script src="../javascript/administrador.js"></script> </body>
 </html>
